--- a/test/fixtures/lists.yml
+++ b/test/fixtures/lists.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: "MyString"
-  description: "MyText"
-  user: musa
+  title: MyString
+  user: one
 
 two:
-  title: "MyString"
-  description: "MyText"
-  user: benard
+  title: MyString
+  user: two
