--- a/test/fixtures/todo_items.yml
+++ b/test/fixtures/todo_items.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyString
-  list: one
-  user: one
+  content: MyText
+  card: one
 
 two:
-  content: MyString
-  list: two
-  user: two
+  content: MyText
+  card: two
